--- a/style.css
+++ b/style.css
@@ -7,3 +7,135 @@ Description: Wodpress Blog, Bootstrap, Custom Theme.
 Tags: Blogs, Theme, Bootstrap.
 Text Domain: easy2migrate
 */
+/* line 5, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+/* line 22, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html {
+  line-height: 1;
+}
+
+/* line 24, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none;
+}
+
+/* line 26, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 28, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+/* line 30, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: none;
+}
+/* line 103, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+  content: none;
+}
+
+/* line 32, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none;
+}
+
+/* line 116, ../../../../../../Ruby31-x64/lib/ruby/gems/3.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block;
+}
+
+/*================================================
+                    Globals
+==================================================*/
+/*================================================
+                    Variables
+==================================================*/
+/*================================================
+                Global Declrations
+==================================================*/
+/* line 24, assests/sass/_partials/_variables.scss */
+a {
+  text-decoration: none;
+  transition: all .5s ease;
+}
+
+/*================================================
+                    Globals
+==================================================*/
+/*================================================
+                    Variables
+==================================================*/
+/*================================================
+                Global Declrations
+==================================================*/
+/* line 24, assests/sass/_partials/_variables.scss */
+a {
+  text-decoration: none;
+  transition: all .5s ease;
+}
+
+/* line 2, assests/sass/_partials/_header.scss */
+header {
+  padding: 10px 15px;
+  background: #000000;
+}
+
+/* line 7, assests/sass/_partials/_header.scss */
+.navbar-collapse {
+  justify-content: flex-end;
+}
+
+/* line 12, assests/sass/_partials/_header.scss */
+.navigation li {
+  padding: 10px 15px;
+  margin: 0 10px;
+  border-radius: 5px;
+  transition: all 0.5s ease;
+}
+/* line 17, assests/sass/_partials/_header.scss */
+.navigation li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+/* line 25, assests/sass/_partials/_header.scss */
+.navigation li:hover {
+  background: #ff7f00;
+}
+
+/* line 16, assests/sass/style.scss */
+h1 {
+  font-size: 50px;
+  color: red;
+  line-height: 10px;
+}
